--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -280,7 +280,7 @@
 			</td></tr>
 	</table>
 
-	<!-- TABLE 5:	 HTTP Headers - headers.js -->
+	<!-- TABLE 5: HTTP Headers - headers.js -->
 	<table id="tb5">
 		<col width="50%"><a name="headers"></a><col width="50%">
 		<thead><tr><th colspan="2">
@@ -321,7 +321,8 @@
 				<div class="btn-left"><button class="btn6" onClick="outputSection(`6`, `c`, `m`)">[ re-run tests ]</button></div>
 				<div>[navigator] cookieEnabled</div></div></td><td class="c" id="nCookieEnabled"></td>
 		</tr>
-		<tr><td>[test] 1st party cookie</td><td class="c" id="cTest"></td></tr>
+		<tr><td>[test] javascript 1st party session cookie</td><td class="c" id="cTest"></td></tr>
+		<tr><td>[test] javascript 1st party persistent cookie</td><td class="c" id="cTest2"></td></tr>
 		<tr><td>localStorage</td><td class="c" id="storageLSupport"></td></tr>
 		<tr><td>[test] localStorage</td><td class="c" id="storageLTest"></td></tr>
 		<tr><td>sessionStorage</td><td class="c" id="storageSSupport"></td></tr>
