--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -424,7 +424,7 @@
 				<div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="3"><div>
-				<div class="btn-left"><button class="btn9" id="drRun">[ re-run tests ]</button></div>
+				<div class="btn-left"><button class="btn9"  onClick="outputSection(`9`, `c1`, `m`)">[ re-run tests ]</button></div>
 				<div>Element.getClientRects</div></div></td><td colspan="5" class="mono" id="dr1"></td>
 		</tr>
 		<tr><td colspan="3">Element.getBoundingClientRect</td><td colspan="5" class="mono" id="dr2"></td></tr>
