--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -91,7 +91,9 @@
 	</table>
 
 		<div id='testdpi' style='height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;'></div>
-		<div class="hidden"><span class="cssLH" id="testLH">css line height hopefully with Times New Roman</span></div>
+		<div id="testLHdiv" style='position: absolute; top: -2000%;'>
+			<span class="cssLH" id="testLH">line height test</span>
+		</div>
 		<div class="hidden"><object id="obj68"></object></div>
 
 	<!-- TABLE 2: User Agent - part of screen.js-->
