--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -217,6 +217,7 @@
 	</table>
 
 	<div class="hidden"><form><input id="appL1el" required="" type="text"></form></div>
+	<div style='position: absolute; top: -2000%;'><img id="imageTest" src=""></span></div>
 	<iframe id="iframeDTD1" style='position: absolute; top: -2000%;'></iframe>
 	<iframe id="iframeDTD2" style='position: absolute; top: -2000%;'></iframe>
 	<iframe id="iframeAPPL" style='position: absolute; top: -2000%;'></iframe>
