--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -20,7 +20,17 @@
 		<div class="hidden"><object id="obj68"></object></div>
 		<img id="element_FULLSCREEN" width=0 height=0></img>
 		<!-- widget os -->
-		<iframe id="iframeWidget" class="offscreen"></iframe>
+		<div class="hidden">
+			<input type="reset" value="" id="widget1"><br>
+			<input type="checkbox" id="widget2"><br>
+			<input type="color" id="widget3"><br>
+			<select id="widget4"><option value="a"></option></select><br>
+			<input type="datetime-local" id="widget5"><br>
+			<input type="radio" id="widget6"><br>
+			<input type="text" id="widget7"><br>
+			<input type="date" id="widget8"><br>
+			<textarea id="widget9"></textarea><br>
+		</div>
 		<!-- app language -->
 		<div class="offscreen"><img id="APP_LANG_IMAGE" src="images/doesntexist.png"></span></div>
 		<div class="offscreen"><form><input id="APP_LANG_1" required="" type="text"></form></div>
