--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -33,10 +33,10 @@
 		</div>
 		<!-- app language -->
 		<div class="offscreen"><img id="APP_LANG_IMAGE" src="images/doesntexist.png"></span></div>
-		<div class="offscreen"><form><input id="APP_LANG_1" required="" type="text"></form></div>
-		<iframe id="APP_LANG_2" class="offscreen"></iframe>
-		<iframe id="APP_LANG_3" class="offscreen"></iframe>
-		<iframe id="APP_LANG_4" class="offscreen"></iframe>
+		<div class="hidden"><form><input id="APP_LANG_1" required="" type="text"></form></div>
+		<iframe id="APP_LANG_2" class="hidden"></iframe>
+		<iframe id="APP_LANG_3" class="hidden"></iframe>
+		<iframe id="APP_LANG_4" class="hidden"></iframe>
 		<!-- domrect -->
 		<iframe id="IFRAME_DOMRECT" class="offscreen"></iframe>
 		<!-- default font size -->
@@ -53,7 +53,7 @@
 			<div><span id="woff_fnt1" class="woff_fnt1" style='font-size: 128px;'>&#xe800;</span></div>
 		</div>
 		<!-- unicode glyphs -->
-		<div class="offscreen">
+		<div class="offscreen" id="unicode">
 			<div id="ugDiv" class="normalized" style='font-size: 22pt;'><span id="ugSpan"><span id="ugSlot"></span></span></div>
 		</div>
 		<!-- font fallback -->
