--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -42,9 +42,9 @@
 		<!-- default font size -->
 		<div class="offscreen">
 			<div class="normalized">
-				<div><span id="df1" style='font-family: serif;'>mmmmmmmmmmlli<span></div>
-				<div><span id="df2" style='font-family: sans-serif;'>mmmmmmmmmmlli<span></div>
-				<div><span id="df3" style='font-family: monospace;'>mmmmmmmmmmlli<span></div>
+				<div><span id="df1" style='font-family: serif;'><span></div>
+				<div><span id="df2" style='font-family: sans-serif;'><span></div>
+				<div><span id="df3" style='font-family: monospace;'><span></div>
 			</div>
 		</div>
 		<!-- woff2 -->
@@ -53,7 +53,7 @@
 			<div><span id="woff_fnt1" class="woff_fnt1" style='font-size: 128px;'>&#xe800;</span></div>
 		</div>
 		<!-- unicode glyphs -->
-		<div class="offscreen" id="unicode">
+		<div class="offscreen">
 			<div id="ugDiv" class="normalized" style='font-size: 22pt;'><span id="ugSpan"><span id="ugSlot"></span></span></div>
 		</div>
 		<!-- font fallback -->
