--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -32,7 +32,7 @@
 			<textarea id="widget9"></textarea><br>
 		</div>
 		<!-- app language -->
-		<div class="offscreen"><img id="APP_LANG_IMAGE" src="images/doesntexist.png"></span></div>
+		<div class="offscreen"><img id="APP_LANG_IMAGE" src=""></span></div>
 		<div class="hidden"><form><input id="APP_LANG_1" required="" type="text"></form></div>
 		<iframe id="APP_LANG_2" class="hidden"></iframe>
 		<iframe id="APP_LANG_3" class="hidden"></iframe>
