--- a/extra.html
+++ b/extra.html
@@ -2,68 +2,109 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <title>TorZillaPrint: Additional Tests</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <script src="js/generic.js"></script>
-  <script src="js/globals.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<title>TorZillaPrint: Additional Tests</title>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<script src="js/generic.js"></script>
+	<script src="js/globals.js"></script>
 </head>
 
 <body>
-  <table>
-  <tr><td><a anchor="top"><h2>TorZillaPrint: Additional Tests</h2></td></tr>
-  <tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
-  </table>
 
-  <table id="tb2">
-    <col width="37%"><a name="form controls"></a><col width="63%">
-    <thead><tr><th colspan="2"><div class="nav-title">widgets / form controls</div></th></tr></thead>
-    <tr><td><div>
-        <div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `e`)">[ re-run tests ]</button></div>
-        <div>one</div></div></td><td></td></tr>
-    <tr><td>two</td><td></td></tr>
-    <tr><td colspan="2" class="showhide">
-        <input id="collapseW" class="toggle" type="checkbox" checked onchange="toggleitems(this, `W`)">
-        <label for="collapseW" class="lbl-toggle" id="labelW">&#9660; show details</label>
-    </td></tr>
-    <tr class="togW"><td>one</td><td></td></tr>
-    <tr class="togW"><td>two</td><td></td></tr>
-    <tr class="togW"><td colspan="2"></td></tr>
-  </table>
+	<!-- non-displayed elements -->
+	<!-- font fallback -->
+	<div class="offscreen"><span id="fontFBTest" style='white-space: nowrap; font-family: fontFallback;'></span></div>
 
-  <!-- TABLE 3: chrome:// -->
-  <table id="tb3">
-    <col width="37%"><a name="chrome"></a><col width="63%">
-    <thead><tr><th colspan="2"><div class="nav-title">chrome://</div></th></tr></thead>
-    <tr><td colspan="2" class="intro"><span class="no_color">The <code>chrome://</code> list from
-      <a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a> was created from
-      all Firefox 10-62 releases, for Windows/Linux/Mac, and does not include any new resources which may be present in subsequent
-      releases. This test removed one item, <code>chrome://global/content/minimal-xul.css</code>, for stability purposes on this site.</span>
-    </td></tr>
-    <tr><td><div>
-        <div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`3`, `c`, `e`)">[ run tests ]</button></div>
-        <div>images</div></div></td>
-      <td class="c mono" id="imgHash"></td></tr>
-    <tr><td>js</td><td class="c mono" id="jsHash"></td></tr>
-    <tr><td>css</td><td class="c mono" id="cssHash"></td></tr>
-    <tr><td>combined</td></td><td class="c mono" id="allHash"></td></tr>
-    <tr><td colspan="2" class="showhide">
-        <input id="collapseC" class="toggle" type="checkbox" checked onchange="toggleitems(this, `C`)">
-        <label for="collapseC" class="lbl-toggle" id="labelC">&#9660; show details</label>
-    </td></tr>
-    <tr class="togC">
-     <td><button class="btn0" onClick="copyclip(`allLoaded`)">[ copy to clipboard ]</button>[alphabetically sorted] all</td>
-     <td class="c" id="allLoaded"></td>
-    </tr>
-    <tr class="togC"><td colspan="2"></td></tr>
-    <tr><td colspan="2"><span class="no_color">chrome:// code based on work by </span>
-      <a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a></td></tr>
-  </table>
-  <br>
+	<table>
+		<tr><td><a anchor="top"><h2>TorZillaPrint: Additional Tests</h2></td></tr>
+		<tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
+	</table>
 
-  <script src="js/main.js"></script>
-  <script src="js/widgets.js"></script>
-  <script src="js/chrome.js"></script>
+	<table id="tb2">
+		<col width="37%"></a><col width="63%">
+		<thead><tr><th colspan="2">widgets / form controls</div></th></tr></thead>
+		<tr><td><div>
+				<div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `e`)">[ re-run tests ]</button></div>
+				<div>one</div></div></td><td></td></tr>
+		<tr><td>two</td><td></td></tr>
+		<tr><td colspan="2" class="showhide">
+				<input id="collapseW" class="toggle" type="checkbox" checked onchange="toggleitems(this, `W`)">
+				<label for="collapseW" class="lbl-toggle" id="labelW">&#9660; show details</label>
+		</td></tr>
+		<tr class="togW"><td>one</td><td></td></tr>
+		<tr class="togW"><td>two</td><td></td></tr>
+		<tr class="togW"><td colspan="2"></td></tr>
+	</table>
+
+	<!-- TABLE 3: chrome:// -->
+	<table id="tb3">
+		<col width="37%"></a><col width="63%">
+		<thead><tr><th colspan="2">chrome://</th></tr></thead>
+		<tr><td colspan="2" class="intro"><span class="no_color">The <code>chrome://</code> list from
+			<a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a> was created from
+			all Firefox 10-62 releases, for Windows/Linux/Mac, and does not include any new resources which may be present in subsequent
+			releases. This test removed one item, <code>chrome://global/content/minimal-xul.css</code>, for stability purposes on this site.</span>
+		</td></tr>
+		<tr><td><div>
+				<div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`3`, `c`, `e`)">[ run tests ]</button></div>
+				<div>images</div></div></td>
+			<td class="c mono" id="imgHash"></td></tr>
+		<tr><td>js</td><td class="c mono" id="jsHash"></td></tr>
+		<tr><td>css</td><td class="c mono" id="cssHash"></td></tr>
+		<tr><td>combined</td></td><td class="c mono" id="allHash"></td></tr>
+		<tr><td colspan="2" class="showhide">
+				<input id="collapseC" class="toggle" type="checkbox" checked onchange="toggleitems(this, `C`)">
+				<label for="collapseC" class="lbl-toggle" id="labelC">&#9660; show details</label>
+		</td></tr>
+		<tr class="togC">
+		 <td><button class="btn0" onClick="copyclip(`allLoaded`)">[ copy to clipboard ]</button>[alphabetically sorted] all</td>
+		 <td class="c" id="allLoaded"></td>
+		</tr>
+		<tr class="togC"><td colspan="2"></td></tr>
+		<tr><td colspan="2"><span class="no_color">chrome:// code based on work by </span>
+			<a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a></td></tr>
+	</table>
+
+	<!-- TABLE 4: chrome:// -->
+	<table id="tb4">
+		<col width="1%"><col width="36%"><col width="63%">
+		<thead><tr><th colspan="3">monsta font list</th></tr></thead>
+		<tr><td colspan="3" class="intro"><span class="no_color">This is show that with mitigation measures, font entropy is high:
+			The list linked below, will include os lists, whitelists, and some unique fonts bundled with popular applications.
+			In reality a much smaller	list can be used without sacrificing much entropy.</span>
+		</td></tr>
+		<tr><td colspan="2"><div><div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `e`)">[ run monsta tests ]</button></div>
+			<div>font list</div></div></td>
+			<td class="mono" id="monsta_fontList"><span class="no_color">
+			<a href="txt/fonts_monsta.txt" target='blank' class='blue'>fonts_monsta<a></span></td></tr>
+		<tr><td colspan="2">fingerprintjs2 <sup>1</sup></td><td class="c mono" id="monsta_fontFPJS2"></td></tr>
+		<tr><td colspan="2">font fallback <sup>2</sup></td><td class="c mono" id="monsta_fontFB"></td></tr>
+		<!--DETAILS-->
+		<tr><td colspan="3" class="showhide">
+				<input id="collapseF" class="toggle" type="checkbox" checked onchange="toggleitems(this, `F`)">
+				<label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
+		</td></tr>
+		<!--WHITELIST: c2-->
+		<tr class="togF"><td colspan="2" class="sub10">fingerprintjs2 [monsta]</td>
+			<td><button class="btn0" onClick="copyclip(`small_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
+		<tr class="togF"><td></td><td colspan="2" id="monsta_fontFPJS2Found"></td></tr>
+		<tr class="togF"><td colspan="2" class="sub10">font fallback [monsta]</td>
+			<td><button class="btn0" onClick="copyclip(`small_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
+		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFBFound"></td></tr>
+		<!--CREDITS-->
+		<tr><td colspan="3"><span class="no_color">code based on work by </span>
+			<a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a> <sup>1</sup>
+			<span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://github.com/arthuredelstein/tordemos">Arthur Edelstein</a> <sup>2</sup>
+		</td></tr>
+	</table>
+
+
+	<br>
+	<script src="js/main.js"></script>
+	<script src="js/widgets.js"></script>
+	<script src="js/chrome.js"></script>
+	<script src="js/fonts.js"></script>
 
 </body>
 </html>
