--- a/extra.html
+++ b/extra.html
@@ -69,9 +69,9 @@
 	<table id="tb4">
 		<col width="1%"><col width="36%"><col width="63%">
 		<thead><tr><th colspan="3">monsta font list</th></tr></thead>
-		<tr><td colspan="3" class="intro"><span class="no_color">This is show that with mitigation measures, font entropy is high:
-			The list linked below, will include os lists, whitelists, and some unique fonts bundled with popular applications.
-			In reality a much smaller	list can be used without sacrificing much entropy.</span>
+		<tr><td colspan="3" class="intro"><span class="no_color">This is to show that without mitigation measures, font entropy is
+			high: The list linked below, will include os lists, whitelists, and some unique fonts bundled with popular applications.
+			In reality a much smaller list can be used without sacrificing much entropy.</span>
 		</td></tr>
 		<tr><td colspan="2"><div><div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `e`)">[ run monsta tests ]</button></div>
 			<div>font list</div></div></td>
@@ -87,7 +87,7 @@
 		<!--WHITELIST: c2-->
 		<tr class="togF"><td colspan="2" class="sub10">fingerprintjs2 [monsta]</td>
 			<td><button class="btn0" onClick="copyclip(`small_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
-		<tr class="togF"><td></td><td colspan="2" id="monsta_fontFPJS2Found"></td></tr>
+		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFPJS2Found"></td></tr>
 		<tr class="togF"><td colspan="2" class="sub10">font fallback [monsta]</td>
 			<td><button class="btn0" onClick="copyclip(`small_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
 		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFBFound"></td></tr>
