--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -555,7 +555,7 @@
 		<!--WHITELIST: c2: small -->
 		<tr><td colspan="3" class="center">------</td></tr>
 		<tr><td colspan="2"><div>
-				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c2`, `m`)">[re-run whitelist tests ]</button></div>
+				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c2`, `m`)">[run whitelist tests ]</button></div>
 				<div>font list</div></div></td>
 				<td class="mono" id="small_fontList"></td>
 		</tr>
